--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 		<module>cloud-eureka-server7002</module>
 		<module>cloud-provider-payment8004</module>
 		<module>cloud-consumer-zookeeper-order80</module>
-	</modules>
+		<module>cloud-provider-payment8006</module>
+        <module>cloud-consumer-consul-order80</module>
+    </modules>
 
 	<!-- 统一管理jar包版本 -->
 	<properties>
