--- a/cloud-provider-payment8004/src/main/resources/application.yml
+++ b/cloud-provider-payment8004/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
       connect-string: 127.0.0.1:2181
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/cloud?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
     username: root
-    password: root
+    password: komorebi
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
